--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravelcollective/html": "~5.0",
+        "cartalyst/sentinel": "2.0.*",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
