--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravelcollective/html": "~5.0",
         "cartalyst/sentinel": "2.0.*",
+        "guzzlehttp/guzzle": "~6.0",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
